<resources>
    <string name="app_name">gdscdwp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">retry</string>
    <string name="welcome_to">Welcome to</string>
    <string name="pets">Pets</string>
    <string name="weekly">Weekly</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>

    <string name="your_pass">Your pass</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="sign_up_to_pets">Sign up to Pets</string>
    <string name="name">Name</string>
    <string name="log_in_with">Log in with</string>


    <string name="confirm_password">Confirm Password</string>
    <string name="and_again">And again!</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="update">Update</string>
    <string name="delete_account">Delete Account</string>
    <string name="im_looking_for_cats_in">Im looking for cats in</string>
</resources>