<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="viewModel"
            type="com.example.gdscdwp.editprofile.EditProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pink"
        tools:context=".editprofile.EditProfileFragment">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginStart="32dp"
            android:src="@drawable/placeholder_cat"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <EditText
            android:id="@+id/LastNameEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:background="@color/white"
            android:hint="@string/last_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/fullNameEditText"
            app:layout_constraintStart_toStartOf="@+id/profile_image"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:background="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/LastNameEditText"
            app:layout_constraintStart_toStartOf="@+id/LastNameEditText"
            app:layout_constraintTop_toBottomOf="@+id/LastNameEditText" />

        <EditText
            android:id="@+id/PhonenumberEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:background="@color/white"
            android:hint="@string/phone_number"
            android:inputType="textEmailAddress|phone"
            android:minHeight="48dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/emailEditText"
            app:layout_constraintStart_toStartOf="@+id/emailEditText"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

        <EditText
            android:id="@+id/fullNameEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:background="@color/white"
            android:hint="@string/first_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toTopOf="@+id/profile_image" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/update"
            android:onClick="@{() -> viewModel.setShowDialogUpdateToTrue()}"
            app:layout_constraintEnd_toEndOf="@+id/PhonenumberEditText"
            app:layout_constraintStart_toStartOf="@+id/PhonenumberEditText"
            app:layout_constraintTop_toBottomOf="@+id/PhonenumberEditText" />

        <TextView
            android:id="@+id/deleteAccountEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/delete_account"
            android:textColor="@color/dark_pink"
            android:textSize="16sp"
            android:onClick="@{() -> viewModel.setShowDialogDeleteToTrue()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>