<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentication.authActivity.WelcomeFragment">


        <TextView
            android:id="@+id/welcomeToText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to"

            android:textColor="#000000"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35000002" />

        <TextView
            android:id="@+id/petsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pets"
            android:textColor="#000000"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/welcomeToText"
            app:layout_constraintTop_toBottomOf="@+id/welcomeToText" />

        <TextView
            android:id="@+id/weeklyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekly"
            android:textColor="@color/dark_pink"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/welcomeToText"
            app:layout_constraintStart_toEndOf="@+id/petsText"
            app:layout_constraintTop_toBottomOf="@+id/welcomeToText" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_pink"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/sign_up"
            android:textColor="@color/dark_pink"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintVertical_bias="0.100"
            app:strokeColor="@color/dark_pink"
            app:strokeWidth="1sp" />

        <ImageView
            android:id="@+id/bottomImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/group_31__1_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupButton" />

        <ImageView
            android:id="@+id/topImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/top_welcome"
            app:layout_constraintBottom_toTopOf="@+id/welcomeToText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>