<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.gdscdwp.authentication.signup.SignupViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentication.signup.SignupFragment">

        <EditText
            android:id="@+id/confirmPasswordEditTextSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={viewModel.repeatedPassword}"
            android:background="@color/pink"
            android:ems="10"
            android:hint="@string/and_again"
            android:inputType="textPassword"
            android:padding="10sp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/loginButtonLogin"
            app:layout_constraintStart_toStartOf="@+id/passwordEditTextSignUp"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditTextSignUp" />

        <TextView
            android:id="@+id/confirmPassTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            app:layout_constraintBottom_toTopOf="@+id/confirmPasswordEditTextSignUp"
            app:layout_constraintStart_toStartOf="@+id/confirmPasswordEditTextSignUp" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@color/pink"
            android:text="@={viewModel.email}"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="10sp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/passwordEditTextSignup"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditTextSignup" />

        <TextView
            android:id="@+id/emailEditTextSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3" />

        <EditText
            android:id="@+id/passwordEditTextSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={viewModel.username}"
            android:layout_marginTop="52dp"
            android:background="@color/pink"
            android:ems="10"

            android:inputType="textPersonName"
            android:padding="10sp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/loginButtonLogin"
            app:layout_constraintStart_toStartOf="@+id/loginButtonLogin"
            app:layout_constraintTop_toBottomOf="@+id/SignupTextView"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/loginButtonLogin"
            android:layout_width="190sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/dark_pink"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:onClick="@{() -> viewModel.setEventSigninToTrue()}"
            app:layout_constraintBottom_toTopOf="@+id/backgroundImageView"
            app:layout_constraintEnd_toEndOf="@+id/weeklyTextView"
            app:layout_constraintStart_toStartOf="@+id/SignupTextView"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/backgroundImageView"
            android:layout_width="0dp"
            android:layout_height="140sp"
            android:scaleType="fitXY"
            android:src="@drawable/bottom_rectangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/passwordEditTextSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@color/pink"
            android:ems="10"
            android:text="@={viewModel.password}"
            android:hint="@string/your_pass"
            android:inputType="textPassword"
            android:padding="10sp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/passwordEditTextSignUp"
            app:layout_constraintStart_toStartOf="@+id/passwordEditTextSignUp" />

        <TextView
            android:id="@+id/SignupTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up_to_pets"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <TextView
            android:id="@+id/weeklyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekly"
            android:textColor="@color/dark_pink"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/SignupTextView"
            app:layout_constraintTop_toTopOf="@+id/SignupTextView" />

        <ImageView
            android:id="@+id/weeklyPetsImageView"
            android:layout_width="393dp"
            android:layout_height="120sp"
            android:src="@drawable/quote"
            app:layout_constraintBottom_toBottomOf="@+id/backgroundImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backgroundImageView" />

        <TextView
            android:id="@+id/userNameTextViewSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            app:layout_constraintBottom_toTopOf="@+id/passwordEditTextSignup"
            app:layout_constraintStart_toStartOf="@+id/passwordEditTextSignup" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@drawable/top_rectanggle"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backButtonSignin"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="@{() -> viewModel.setEventGoBackToTrue()}"

                android:src="@drawable/group"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>